# nzrapi_framework

./: .flake8  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  publish.sh  pyproject.toml
examples/: README.md  ai_chatbot.py  basic_api.py  dependency_injection_example.py  improved_features_demo.py  middleware_configuration_demo.py  postgres_api.py  security_example.py  starlette_abstractions_demo.py  typed_api_example.py  websocket_example.py
examples/clean_dependency_injection/: __init__.py  config.py  main.py
examples/clean_dependency_injection/api/: __init__.py  dependencies.py
examples/clean_dependency_injection/api/routes/: users.py
examples/clean_dependency_injection/models/: __init__.py  user.py
examples/clean_dependency_injection/repositories/: __init__.py  user_repository.py
examples/clean_dependency_injection/services/: __init__.py  user_service.py
examples/clean_websocket/static/js/: websocket_client.js
examples/clean_websocket/templates/: websocket_demo.html
examples/mcp_server_example/: Dockerfile  README.md  __init__.py  ai_models.py  config.py  docker-compose.yml  main.py  models.py  requirements.txt  views.py
examples/n8n_integration/: README.md
examples/new_postgres_api/: .env.example  README.md  main.py  models.py  requirements.txt  routes.py  seed_db.py  serializers.py  views.py
examples/new_postgres_api/tests/: test_api.py
nzrapi/: __init__.py  __main__.py  app.py  cli.py  decorators.py  dependencies.py  exceptions.py  filters.py  middleware.py  middleware_abstractions.py  pagination.py  permissions.py  requests.py  responses.py  routing.py  schemas.py  security.py  serializers.py  services.py  settings.py  status.py  typing.py  validators.py  views.py  websockets.py
nzrapi/ai/: __init__.py  context.py  models.py  protocol.py  registry.py
nzrapi/db/: __init__.py  fields.py  manager.py  models.py
nzrapi/docs/: MIGRATION_FROM_FASTAPI.md
nzrapi/examples/: quick_start.py
nzrrest/: __init__.py  app.py  cli.py  db.py  exceptions.py  middleware.py  requests.py  responses.py  routing.py  serializers.py  validators.py
nzrrest/ai/: __init__.py  context.py  models.py  protocol.py  registry.py
templates/api_server/: README.md  config.py  docker-compose.yml  main.py  models.py  requirements.txt  views.py
templates/mcp_server/: .env.example  README.md  __init__.py  ai_models.py  config.py  docker-compose.yml  main.py  models.py  requirements.txt  views.py
tests/: __init__.py  test_ai_models.py  test_app.py  test_db_helpers.py  test_developer_exceptions.py  test_new_postgres_api.py  test_serializers.py  test_simple_auth.py
